--- a/sohnaa-testimonial/css/style.css
+++ b/sohnaa-testimonial/css/style.css
@@ -39,7 +39,7 @@
     position: relative;
     height: 35px;
     width: 35px;
-    background-color: #fb9c9a;   
+    background-color: #000;   
     display: inline-flex;
     border-radius: 50%;
 }
